# infractl

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONFIG.md  Cargo.toml  Cargo.toml''  DEPLOY.md  DEPLOY.md''  Dockerfile  README.md  infractl.openrc  infractl.service
.github/actions/: ci.yml
.github/workflows/: ci.yml
examples/: README.md  agent.minimal.yaml  agent.production.yaml  agent.standard.yaml  home.minimal.yaml  home.production.yaml  home.standard.yaml
scripts/: docker-config.yaml  install.sh  release.sh  uninstall.sh
src/: cli.rs  config.rs  error.rs  logging.rs  main.rs
src/assets/: dashboard.html  dashboard.html''
src/deploy/: docker.rs  executor.rs  git.rs  mod.rs  queue.rs  script.rs  telegram.rs
src/metrics/: docker.rs  mod.rs  system.rs
src/server/: app_state.rs  assets.rs  auth.rs  middleware.rs  mod.rs  shutdown.rs
src/server/routes/: api.rs  health.rs  mod.rs  webhook.rs
src/storage/: aggregation.rs  migrations.rs  mod.rs  models.rs  repository.rs
src/updater/: binary.rs  config_sync.rs  github.rs  mod.rs
tests/: Dockerfile.test  Makefile  docker-compose.test.yml
tests/configs/: agent1.yaml  gitea-init.sh  home.yaml
tests/scenarios/: 01_health.sh  02_auth.sh  03_git_deploy.sh  05_webhook.sh  06_metrics.sh  09_security.sh  10_security_injection.sh  11_security_jwt.sh  12_security_network.sh  20_deploy_git.sh  21_deploy_docker.sh  22_deploy_script.sh  23_deploy_webhook.sh  30_integration_metrics.sh  31_integration_home_agent.sh  32_integration_config.sh  run-all.sh
