[package]
name = "infractl"
version = "0.1.5"
edition = "2021"
authors = ["Volodymyr Razumniak <me@mozg.dev>"]
description = "Infrastructure monitoring and deployment agent"
license = "MIT"
repository = "https://github.com/razumnyak/infractl"
keywords = ["infrastructure", "monitoring", "deployment", "devops"]
categories = ["command-line-utilities", "web-programming"]

[features]
default = ["docker", "git"]
docker = ["bollard"]
git = ["git2"]

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full", "signal"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.5", features = ["timeout", "limit"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# JWT
jsonwebtoken = "9"

# System metrics
sysinfo = "0.32"

# Docker (optional)
bollard = { version = "0.17", optional = true }

# Git (optional)
git2 = { version = "0.19", optional = true }

# Vendored OpenSSL for cross-compilation
openssl = { version = "0.10", features = ["vendored"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Time (pinned to avoid edition2024)
time = { version = "0.3.36", features = ["serde", "serde-human-readable", "formatting", "parsing", "macros"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"

# Embedded assets
rust-embed = "8"
mime_guess = "2"

# Async traits
async-trait = "0.1"

# Futures utilities
futures = "0.3"

# IP network
ipnetwork = "0.20"

# Semver
semver = { version = "1", features = ["serde"] }

# HMAC for webhook signatures
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Regex for env var substitution
regex = "1"

# Duration parsing
humantime = "2"

# Archive extraction for self-update
flate2 = "1"
tar = "0.4"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"

[profile.release-debug]
inherits = "release"
strip = false
debug = true

# Cross-compilation targets
# Build with: cross build --release --target <target>
# x86_64-unknown-linux-musl
# aarch64-unknown-linux-musl